new P.A. is ready with enquiry form and quote screen

--- a/src/app/pages/personal-accident-cover/enquiry-form/enquiry-form.scss
+++ b/src/app/pages/personal-accident-cover/enquiry-form/enquiry-form.scss
@@ -3,6 +3,20 @@
 :host {
   display: block;
 }
+/* force dropdown to open downward */
+.dropdown-open-down {
+  appearance: none;
+  background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='18' width='18' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 20,0 10,12'/></svg>");
+  background-repeat: no-repeat;
+  background-position: right 0.5rem center;
+  background-size: 16px;
+}
+
+/* avoid native upward open on small space */
+select {
+  position: relative;
+  z-index: 5;
+}
 
 /* Smooth micro-animations */
 * {
