--- a/src/app/pages/supertopup/enquiry-form/enquiry-form.html
+++ b/src/app/pages/supertopup/enquiry-form/enquiry-form.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <!-- OUTER BG -->
 <div class="w-full flex justify-center px-3 sm:px-6 py-6 sm:py-10 bg-[#F5FAFC]">
   <!-- WHITE CARD SHELL -->
@@ -527,3 +528,4 @@
     </div>
   </div>
 </div>
+<app-footer></app-footer>
