--- a/src/app/shared/components/footer/footer.html
+++ b/src/app/shared/components/footer/footer.html
@@ -5,7 +5,7 @@
     <!-- About -->
     <div class="flex items-center cursor-pointer">
   <img
-    src="../../../../assets/PP Logo.svg"
+    src="assets/pplogo.svg"
     alt="Policy Planner Logo"
     class="h-12 w-auto object-contain"
   />
