--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -4,7 +4,7 @@
     <!-- Logo -->
  <div class="flex items-center cursor-pointer">
   <img
-    src="../../../../assets/PP Logo.svg"
+    src="assets/pplogo.svg"
     alt="Policy Planner Logo"
     class="h-12 w-auto object-contain"
   />
