changes are done in enquiry form of - PA and SuperTopup

--- a/src/app/pages/supertopup/quotes/quotes.html
+++ b/src/app/pages/supertopup/quotes/quotes.html
@@ -38,16 +38,16 @@
     <div class="dropdown filter-btn w-full sm:w-auto">
       <select (change)="onCoverageAmountChange($event)" class="w-full sm:w-auto bg-transparent outline-none">
         <option value="">Coverage Amt</option>
-        <option value="300000">3 Lakh</option>
+        <!-- <option value="300000">3 Lakh</option> -->
         <option value="500000">5 Lakh</option>
-        <option value="600000">6 Lakh</option>
-        <option value="700000">7 Lakh</option>
-        <option value="800000">8 Lakh</option>
+        <!-- <option value="600000">6 Lakh</option> -->
+        <!-- <option value="700000">7 Lakh</option> -->
+        <!-- <option value="800000">8 Lakh</option> -->
         <option value="1000000">10 Lakh</option>
-        <option value="1100000">11 Lakh</option>
-        <option value="1200000">12 Lakh</option>
+        <!-- <option value="1100000">11 Lakh</option> -->
+        <!-- <option value="1200000">12 Lakh</option> -->
         <option value="1500000">15 Lakh</option>
-        <option value="1600000">16 Lakh</option>
+        <!-- <option value="1600000">16 Lakh</option> -->
         <option value="2000000">20 Lakh</option>
         <option value="2500000">25 Lakh</option>
         <option value="5000000">50 Lakh</option>
@@ -161,7 +161,7 @@
                 View All Features
               </button>
 
-            
+
             </div>
 
             <!-- RIGHT SECTION -->
